--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -1,80 +1,78 @@
 body {
-    margin: 0;
-    width: 100%;
+  margin: 0;
+  width: 100%;
 }
 
 .container {
-    width: 50%;
-    padding: 1rem;
-    background-color: rgb(224, 207, 207);
-    margin: 0 auto;
-    border-radius: 10px;
+  width: 50%;
+  padding: 1rem;
+  background-color: #e0cfcf;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 
 .header {
-    border-radius: 10px;
-    background-color: black;
-    padding: 30px 40px;
-    color: white;
-    text-align: center;
+  border-radius: 10px;
+  background-color: black;
+  padding: 30px 40px;
+  color: white;
+  text-align: center;
 }
 
 input {
-    margin: 0;
-    border: none;
-    width: 75%;
-    padding: 10px;
-    font-size: 1rem;
+  margin: 0;
+  border: none;
+  width: 75%;
+  padding: 10px;
+  font-size: 1rem;
 }
 
 .addBtn {
-    padding: 10px;
-    width: 25%;
-    background-color: #bbb;
-    color: black;
-    text-align: center;
-    font-size: 1rem;
+  padding: 10px;
+  width: 25%;
+  background-color: #bbb;
+  color: black;
+  text-align: center;
+  font-size: 1rem;
 }
 
 .addBtn:hover {
-    background: #9de932;
+  background: #9de932;
 }
 
 ul {
-    list-style: none;
-    padding: 0px;
+  list-style: none;
+  padding: 0px;
 }
 
 ul li {
-    margin-bottom: 10px;
-    border-radius: 5px;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    background: #bfbcbc;
-    font-size: 1rem;
-    height: 1rem;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #bfbcbc;
+  font-size: 1rem;
+  height: 1rem;
 }
 
 ul li:hover {
-    background: #71e710;
+  background: #71e710;
 }
 
 ul li.done {
-    background: #f7f0f0;
-    color: black;
-    text-decoration: line-through;
+  background: #f7f0f0;
+  color: black;
+  text-decoration: line-through;
 }
 
 .close {
-    padding-left: 5px;
-    padding-right: 5px;
-    float: right;
+  padding-left: 5px;
+  padding-right: 5px;
+  float: right;
 }
 
 .close:hover {
-    background-color: #f44336;
-    color: white;
+  background-color: #f44336;
+  color: white;
 }
-
-
 /*# sourceMappingURL=style.css.map */
